添加checkbox变化和批量下载的逻辑处理

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -895,7 +895,7 @@
 				 * @param {Object} data
 				 */
 				function addStorageFolder(data, type) {
-					console.log("addStorageFolder " + type + " " + JSON.stringify(data));
+					//console.log("addStorageFolder " + type + " " + JSON.stringify(data));
 					var li = document.createElement("li");
 					li.setAttribute('id', "fid_" + data.fid);
 					li.setAttribute('data-fid', data.fid);
