--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -180,6 +180,8 @@
 			.cloud-check-show .mui-input-row.mui-checkbox {
 				/*显示选择框*/
 				display: block;
+				width: 40px;
+				height: 42px;
 			}
 
 			.cloud-check-show .mui-navigate-right,
@@ -196,6 +198,7 @@
 			.mui-checkbox label {
 				width: 0px;
 				padding: 11px 20px;
+				background-color: red;
 			}
 
 			.mui-bar {
@@ -277,7 +280,7 @@
 			<div id="edit" class="title-text-pull-right">编辑</div>
 		</header>
 		<nav id="cloud_bottom" class="mui-bar mui-bar-tab">
-			<div class="mui-tab-item cloud-tab-item" value="0">
+			<div id="cloud_bottom_download" class="mui-tab-item cloud-tab-item" value="0">
 				<div class="mui-icon iconfont iconfont-color icon-download"></div>
 				<div class="mui-tab-label">下载</div>
 			</div>
@@ -307,7 +310,6 @@
 							<li class="mui-table-view-cell mui-media">
 								<span class="mui-navigate-right mui-media-object mui-pull-right"></span>
 								<div class="mui-input-row mui-checkbox mui-right mui-pull-right">
-									<label>&nbsp;</label>
 									<input name="checkbox" type="checkbox" />
 								</div>
 								<img class="mui-media-object mui-pull-left" src="../../image/cloud/cloud_0_wenjianjia_1.png">
@@ -320,7 +322,6 @@
 							<li class="mui-table-view-cell mui-media">
 								<span class="mui-navigate-right mui-media-object mui-pull-right"></span>
 								<div class="mui-input-row mui-checkbox mui-right mui-pull-right">
-									<label>&nbsp;</label>
 									<input name="checkbox" type="checkbox" />
 								</div>
 								<img class="mui-media-object mui-pull-left" src="../../image/cloud/cloud_0_wenjianjia_1.png">
@@ -331,7 +332,6 @@
 							<li class="mui-table-view-cell mui-media">
 								<span class="mui-navigate-right mui-media-object mui-pull-right"></span>
 								<div class="mui-input-row mui-checkbox mui-right mui-pull-right">
-									<label>&nbsp;</label>
 									<input name="checkbox" type="checkbox" />
 								</div>
 								<span class="mui-media-object mui-icon iconfont iconfont-size icon-word mui-pull-left"></span>
@@ -361,6 +361,7 @@
 			var showPidList = []; //记录打开的文件夹父id历史
 			var back = true; //是否允许返回
 			var edit = false; //是否显示编辑页面
+			var download = false; //编辑状态下是否允许点击下载
 			var mode; //当前选取的文件夹或文件的数据
 			var mask; //显示底部菜单时的遮罩
 			//云盘子页面
@@ -419,6 +420,8 @@
 						cloud_bottom.className = "mui-bar mui-bar-tab cloud-bar-download";
 						//调整列表
 						document.getElementById("scroll_wrapper_" + showPid).style.bottom = cloud_bottom.offsetHeight + 'px';
+						download = false;
+						document.getElementById("cloud_bottom_download").style.opacity = '0.5';
 						edit = true;
 					} else if(this.innerText == "全选") {
 						var check = document.querySelectorAll("#ul_file_" + showPid + " input");
@@ -428,6 +431,11 @@
 						}
 						if(check.length != 0) {
 							this.innerText = "全不选";
+							download = true;
+							document.getElementById("cloud_bottom_download").style.opacity = '1';
+						} else {
+							download = false;
+							document.getElementById("cloud_bottom_download").style.opacity = '0.5';
 						}
 						document.getElementById("title").innerText = "已选定" + check.length + "个";
 					} else if(this.innerText == "全不选") {
@@ -438,6 +446,8 @@
 						}
 						this.innerText = "全选";
 						document.getElementById("title").innerText = "已选定0个";
+						download = false;
+						document.getElementById("cloud_bottom_download").style.opacity = '0.5';
 					}
 				});
 
@@ -577,74 +587,74 @@
 				 * 点击文件或文件夹
 				 */
 				mui('#all').on('tap', '.mui-table-view-cell', function(e) {
-					if(edit) {
-						return false;
-					}
 					var ids = this.id.split("_"); //元素id
 					console.log("点击文件或文件夹 " + JSON.stringify(ids));
 					mode = allData.value[showPid][ids[1]];
 					console.log("mode " + JSON.stringify(mode));
 					var target = e.target.getAttribute("data-type");
 					console.log("target " + target);
-					if(target == "showbar") {
-						//显示底部
-						var cloud_bottom = document.getElementById("cloud_bottom");
-						cloud_bottom.style.display = "block";
-						if(mode.ftype == '.file') {
-							cloud_bottom.className = "mui-bar mui-bar-tab cloud-bar-folder";
-						} else {
-							cloud_bottom.className = "mui-bar mui-bar-tab";
-						}
-						document.getElementById("fright_" + ids[1]).className = "mui-navigate-right mui-media-object mui-pull-right cloud-bar-showdown";
-						document.getElementById("scroll_wrapper_" + showPid).style.bottom = cloud_bottom.offsetHeight + 'px';
-						mask = mui.createMask(function() {
-							var showdown = document.querySelector("#pid_" + showPid + " .cloud-bar-showdown").className = "mui-navigate-right mui-media-object mui-pull-right";
-							document.getElementById("cloud_bottom").style.display = "none";
-							document.getElementById("scroll_wrapper_" + showPid).style.bottom = "0px";
-						});
-						mask.show();
-						return false;
-					}
-					if(mode.ftype == '.file') { //点击文件夹
-						document.getElementById("title").innerText = mode.fname;
-						var pid_div = document.getElementById("pid_" + mode.fid);
-						if(pid_div != null) {
-							console.log('点击文件夹pid_' + mode.fid + '!=null');
-							pid_div.parentNode.removeChild(pid_div);
-						}
-						//所需参数
-						var comData = {
-							vtp: 0, //类型，0文件及文件夹混合,1文件夹,2文件
-							vvl: mode.fid //	节点ID，顶层为0
-						};
-						//请求数据
-						requestData(comData, mode.fname);
-					} else {
-						var type = cloud.classifyHtml5Media(mode.fname + mode.ftype);
-						if(type == 'html5-imge') { //图片
-							//跳到展示图片界面
-							var targetPage = plus.webview.getWebviewById('storage_show_imge.html');
-							if(targetPage) {
-								events.fireToPageWithData('storage_show_imge.html', 'showFile', {
-									fpath: mode.fpath //图片的七牛路径
-								});
+					if(!edit) {
+						if(target == "showbar") {
+							//显示底部
+							document.getElementById("cloud_bottom_download").style.opacity = '1';
+							var cloud_bottom = document.getElementById("cloud_bottom");
+							cloud_bottom.style.display = "block";
+							if(mode.ftype == '.file') {
+								cloud_bottom.className = "mui-bar mui-bar-tab cloud-bar-folder";
 							} else {
-								events.openNewWindowWithData('storage_show_imge.html', {
-									fpath: mode.fpath //图片的七牛路径
+								cloud_bottom.className = "mui-bar mui-bar-tab";
+							}
+							document.getElementById("fright_" + ids[1]).className = "mui-navigate-right mui-media-object mui-pull-right cloud-bar-showdown";
+							document.getElementById("scroll_wrapper_" + showPid).style.bottom = cloud_bottom.offsetHeight + 'px';
+							mask = mui.createMask(function() {
+								var showdown = document.querySelector("#pid_" + showPid + " .cloud-bar-showdown").className = "mui-navigate-right mui-media-object mui-pull-right";
+								document.getElementById("cloud_bottom").style.display = "none";
+								document.getElementById("scroll_wrapper_" + showPid).style.bottom = "0px";
+							});
+							mask.show();
+							return false;
+						}
+						if(mode.ftype == '.file') { //点击文件夹
+							document.getElementById("title").innerText = mode.fname;
+							var pid_div = document.getElementById("pid_" + mode.fid);
+							if(pid_div != null) {
+								console.log('点击文件夹pid_' + mode.fid + '!=null');
+								pid_div.parentNode.removeChild(pid_div);
+							}
+							//所需参数
+							var comData = {
+								vtp: 0, //类型，0文件及文件夹混合,1文件夹,2文件
+								vvl: mode.fid //	节点ID，顶层为0
+							};
+							//请求数据
+							requestData(comData, mode.fname);
+						} else {
+							var type = cloud.classifyHtml5Media(mode.fname + mode.ftype);
+							if(type == 'html5-imge') { //图片
+								//跳到展示图片界面
+								var targetPage = plus.webview.getWebviewById('storage_show_imge.html');
+								if(targetPage) {
+									events.fireToPageWithData('storage_show_imge.html', 'showFile', {
+										fpath: mode.fpath //图片的七牛路径
+									});
+								} else {
+									events.openNewWindowWithData('storage_show_imge.html', {
+										fpath: mode.fpath //图片的七牛路径
+									});
+								}
+							} else if(type == 'html5-video') {
+								events.openNewWindowWithData('storage_show_video.html', {
+									fpath: mode.fpath //视频的七牛路径
 								});
 							}
-						} else if(type == 'html5-video') {
-							events.openNewWindowWithData('storage_show_video.html', {
-								fpath: mode.fpath //视频的七牛路径
-							});
 						}
 					}
 				});
 
-				//				//选择或取消选择文件
-				//				mui('#all').on('change', 'input', function() {
-				//					console.log("点击checkbox");
-				//				});
+				//点击checkbox
+				mui('#all').on('change', 'input', function() {
+					changeCloudBottom();
+				});
 
 				//点击底部菜单
 				mui('#cloud_bottom').on('tap', '.cloud-tab-item', function() {
@@ -672,41 +682,6 @@
 							break;
 						default:
 							break;
-					}
-				});
-
-				/**
-				 * 点击文件或文件夹的下载
-				 */
-				mui('#all').on('tap', '.icon-download', function(e) {
-					//拦截点击事件的冒泡
-					if(e && e.stopPropagation) {
-						//因此它支持W3C的stopPropagation()方法
-						e.stopPropagation();
-						console.log('if');
-					} else {
-						console.log('else');
-						//否则，我们需要使用IE的方式来取消事件冒泡
-						window.event.cancelBubble = true;
-					}
-					var par = this.parentNode; //找到父元素
-					var id = par.getAttribute('id'); //元素id
-					var pid = par.getAttribute('data-pid'); //父ID
-					var fid = par.getAttribute('data-fid'); //文件id
-					var fname = par.getAttribute('data-fname'); //文件或文件夹名字
-					var ftype = par.getAttribute('data-ftype'); //文件类型
-					var fpath = par.getAttribute('data-fpath'); //文件路径
-					console.log('下载' + id + '|' + fid + "|" + fname + '|' + ftype + '|' + fpath);
-					if(ftype == '.file') {
-						//mui.toast('下载文件夹');
-					} else {
-						events.fireToPageWithData('storage_transport.html', 'addDownload', {
-							pid: pid, //父ID
-							fid: fid, //文件id
-							fname: fname, //文件或文件夹名字
-							ftype: ftype, //文件类型
-							fpath: fpath //文件路径
-						});
 					}
 				});
 			}
@@ -745,7 +720,6 @@
 				if(data.ftype == '.file') { //文件夹
 					html = '<span id="fright_' + data.fid + '" class="mui-navigate-right mui-media-object mui-pull-right" data-type="showbar"></span>\
 							<div class="mui-input-row mui-checkbox mui-right mui-pull-right">\
-								<label>&nbsp;</label>\
 								<input name="checkbox" type="checkbox" />\
 							</div>\
 							<img class="mui-media-object mui-pull-left" src="../../image/cloud/cloud_0_wenjianjia_1.png">\
@@ -759,9 +733,8 @@
 					var fileName = pathList2[0];
 					var path = window.storageKeyName.QNPB + 'yuncunc/' + window.storageKeyName.CLOUDSTORAGETHUMB + fileName + '.png'
 					var html_0 = '<span id="fright_' + data.fid + '" class="mui-navigate-right mui-media-object mui-pull-right" data-type="showbar"></span>\
-								<div class="mui-input-row mui-checkbox mui-right mui-pull-right">\
-									<label>&nbsp;</label>\
-									<input name="checkbox" type="checkbox" value="' + data.fid + '" />\
+								<div class="mui-input-row mui-checkbox mui-right mui-pull-right" data-type="changecheckbox">\
+									<input name="checkbox" type="checkbox" value="' + data.fid + '" data-type="changecheckbox"/>\
 								</div>';
 					var html_1 = '';
 					if(type != '') {
@@ -988,6 +961,9 @@
 				var fileArray = []; //下载的文件列表
 				var showSave = true; //是否显示保存到相册的选项
 				if(edit) {
+					if(!download) { //不允许下载
+						return false;
+					}
 					//批量下载
 					var checked = document.querySelectorAll('.mui-checkbox input[type=checkbox]:checked');
 					for(var i in checked) {
@@ -1075,6 +1051,29 @@
 					checked[i].checked = false;
 				}
 				edit = false;
+			}
+
+			/**
+			 * 编辑状态下修改顶部和底部的显示数据
+			 */
+			function changeCloudBottom() {
+				console.log("changeCloudBottom");
+				var checkBox = document.querySelectorAll('#ul_file_' + showPid + ' .mui-checkbox');
+				var checked = document.querySelectorAll('.mui-checkbox input[type=checkbox]:checked');
+				console.log(checkBox.length + " " + checked.length);
+				if(checked.length == 0) {
+					download = false;
+					document.getElementById("cloud_bottom_download").style.opacity = '0.5';
+				} else {
+					download = true;
+					document.getElementById("cloud_bottom_download").style.opacity = '1';
+				}
+				if(checkBox.length==checked.length){
+					document.getElementById("edit").innerText="全不选";
+				}else{
+					document.getElementById("edit").innerText="全选";
+				}
+				document.getElementById("title").innerText = "已选定" + checked.length + "个";
 			}
 		</script>
 	</body>
