选择文件列表样式和删除逻辑修改

--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -88,6 +88,9 @@
 				background-color: wheat;
 				height: 100%;
 			}
+			.mui-bar-tab~.mui-content{
+				padding-bottom: 81px;
+			}
 		</style>
 	</head>
 
